2003-10-28  Andreas Kupries  <andreask@activestate.com>

	* snit.man:    Fixed typos in documentation.
	* snitfaq.man: 

2003-10-27  Will Duquette  <will@wjduquette.com>

	* snit.html: Fixed typos in documentation.
	* faq.html:

2003-10-27  Andreas Kupries  <andreask@activestate.com>

	* snit.man:    Updated to changes in the .html files.
	* snitfaq.man: 

2003-10-25  Will Duquette  <will@wjduquette.com>

	* snit.tcl:  Added the "except" clause for "delegate method *" and
	* snit.test: "delegate option *".  This allows the user to
	  	     explicitly exclude certain methods and options.
		     Added appropriate tests.

	* snit.html: Gave the Snit FAQ a bit of an overhaul, and added 
	* faq.html:  information corresponding to the recent code
	  	     changes, including a great deal of material on Snit
		     and the Tk option database.  Updated the Snit man
		     page to be consistent with the recent code changes.

2003-10-23  Andreas Kupries  <andreask@activestate.com>

	* snit.man: Updated from Will's html doc's.

2003-10-23  Will Duquette  <will@wjduquette.com>

	* snit.html: Added documentation for the new "hulltype",
	  	     "widgetclass", and "install" commands.  Updated the
	  	     documentation for "installhull" to show the new
	  	     "installhull using" syntax.  Updated the
	  	     documentation for "option" and "delegate option" to
	  	     show how to specify the resource and class names for
	  	     options.  Added a section on the interaction between
	  	     Snit and the Tk option database.

2003-10-21  Will Duquette  <will@wjduquette.com>

	* snit.tcl:  Add the "hulltype" command.  This allows the snit::widget 
	* snit.test: author to choose whether the hull should be a frame
	  	     or a toplevel.  Tests have been updated as usual.

2003-10-20  Will Duquette  <will@wjduquette.com>

	* snit.tcl:  The new "install" command can now be used to install
	* snit.test: components for snit::types as well.  It doesn't add